Do not use the fixed height for HTML select element if appearance is none.

This patch fixes the problem when a text appears chopped in HTML select element with -webkit-appearance:none. If appearance:none then we should use the height that is calculated based using platform-native styling based on the users' operating system's theme.

R=eae@chromium.org
BUG=626278
TEST=third_party/WebKit/LayoutTests/fast/forms/select/menulist-appearance-none.html

Review-Url: https://codereview.chromium.org/2131303003
Cr-Commit-Position: refs/heads/master@{#405066}

Former-commit-id: c35147b9b40980dcaa3fbe64aa355d461a7e6bd6