third_party/WebKit/Source/core/layout/LayoutMenuList.cpp
@@ -263,7 +263,8 @@ void LayoutMenuList::computeIntrinsicLogicalWidths(LayoutUnit& minLogicalWidth, 
 void LayoutMenuList::computeLogicalHeight(LayoutUnit logicalHeight, LayoutUnit logicalTop,
     LogicalExtentComputedValues& computedValues) const
 {
-    logicalHeight = m_innerBlockHeight + borderAndPaddingHeight();
+    if (style()->hasAppearance())
+        logicalHeight = m_innerBlockHeight + borderAndPaddingHeight();
     LayoutBox::computeLogicalHeight(logicalHeight, logicalTop, computedValues);
 }
 
